--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ _data/raw/*.xls
 _data/raw/*.xlsx
 .Rproj.user
 .DS_Store
-h3_compra_combinada\.ipynb_checkpoints
+h3_compra_combinada/.ipynb_checkpoints
